--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 
 <html>
 <head>
-<style>
-.sidebar { background-color: rgba(255, 255, 255, 0.05); transition: background-color 0.5s; }
-.sidebar:hover { background-color: rgba(255, 255, 255, 0.05); }
-.sidebar a { background-color: rgba(255, 255, 255, 0.1); }
-</style>
+<style>.sidebar { left: 0px; }</style>
 <script>
 window.onload = function() {
     var images = ['image/image (1).png', 'image/image (2).png', 'image/image (3).png', 'image/image (4).png', 'image/image (5).png', 'image/image (6).png', 'image/image (7).png', 'image/image (8).png', 'image/image (9).png'];
