--- a/project.html
+++ b/project.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="ko">
- <head>
-  <meta charset="utf-8"/>
-  <title>
+<head>
+<meta charset="utf-8"/>
+<title>
    프로젝트 진행
   </title>
-  <style>
+<style>
    body {
             font-family: Arial, sans-serif;
         }
@@ -41,7 +42,7 @@
             bottom: 0;
         }
   </style>
-  <style>
+<style>
    .home-button {
     display: inline-block;
     padding: 10px 20px;
@@ -58,7 +59,7 @@
     background-color: darkblue;
 }
   </style>
-  <style>
+<style>
    .circle {
     position: absolute;
     height: 100px;
@@ -73,7 +74,7 @@
     to {transform: scale(1.5); opacity: 0;}
 }
   </style>
-  <style>
+<style>
    .message {
     position: absolute;
     font-size: 20px;
@@ -86,46 +87,50 @@
     to {opacity: 0;}
 }
   </style>
- </head>
- <body>
-  <header>
-   <a class="home-button" href="index.html">
+</head>
+<body><div class="sidebar" style="left: -200px; transition: left 2s;">
+<a href="english.html">
+    버튼 1
+   </a>
+<a href="project.html">
+    버튼 2
+   </a>
+<a href="vba.html">버튼 3</a></div>
+<header>
+<a class="home-button" href="index.html">
     Home
    </a>
-   <h1>
+<h1>
     프로젝트
    </h1>
-   <p>
+<p>
     프로젝트를 쉽게 배울 수 있는 웹페이지입니다.
    </p>
-  </header>
-  <main>
-   <h2>
+</header>
+<main>
+<h2>
     프로젝트 내용
    </h2>
-   <ul>
-    <li>
-     <p>
-      <strong>
+<ul>
+<li>
+<p>
+<strong>
        Punch Line
       </strong>
-     </p>
-     <p>
-
-
-     </p>
-    </li>
-    
-    <!-- 이곳에 더 많은 표현을 추가할 수 있습니다 -->
-   </ul>
-  </main>
-  <footer>
+</p>
+<p>
+</p>
+</li>
+<!-- 이곳에 더 많은 표현을 추가할 수 있습니다 -->
+</ul>
+</main>
+<footer>
    © 2023 프로젝트 공부. All rights reserved.
    <a href="mailto:stberry7@gmail.com?subject=Hello&amp;body=Nice%20to%20meet%20you">
     Email me
    </a>
-  </footer>
-  <script>
+</footer>
+<script>
    var clickCount = 0;
 
 
@@ -167,7 +172,6 @@
 //     }
 // });
 //   </script>
- 
 <style>
 .firework {
     position: absolute;
@@ -185,7 +189,6 @@
     }
 }
 </style>
-
 <script>
 var colors = ['#ffb3ba', '#ffdfba', '#ffffba', '#baffc9', '#bae1ff'];
 
