--- a/vba.html
+++ b/vba.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
+
 <html lang="ko">
- 
-
-
-
 <head>
-    <style>
+<style>
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f4f4f4;
@@ -53,8 +50,7 @@
             }
         }
     </style>
-
-    <style>
+<style>
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f4f4f4;
@@ -102,8 +98,7 @@
             }
         }
     </style>
-
-    <style>
+<style>
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f4f4f4;
@@ -151,8 +146,7 @@
             }
         }
     </style>
-
-    <style>
+<style>
         .video-container {
             display: flex;
             flex-wrap: wrap;
@@ -173,12 +167,11 @@
             }
         }
     </style>
-
-  <meta charset="utf-8"/>
-  <title>
+<meta charset="utf-8"/>
+<title>
    VBA 설명
   </title>
-  <style>
+<style>
    body {
             font-family: Arial, sans-serif;
         }
@@ -214,7 +207,7 @@
             bottom: 0;
         }
   </style>
-  <style>
+<style>
    .home-button {
     display: inline-block;
     padding: 10px 20px;
@@ -231,7 +224,7 @@
     background-color: darkblue;
 }
   </style>
-  <style>
+<style>
    .circle {
     position: absolute;
     height: 100px;
@@ -246,7 +239,7 @@
     to {transform: scale(1.5); opacity: 0;}
 }
   </style>
-  <style>
+<style>
    .message {
     position: absolute;
     font-size: 20px;
@@ -259,48 +252,50 @@
     to {opacity: 0;}
 }
   </style>
- </head>
- <body>
-  
+</head>
+<body><div class="sidebar" style="left: -200px; transition: left 2s;">
+<a href="english.html">
+    버튼 1
+   </a>
+<a href="project.html">
+    버튼 2
+   </a>
+<a href="vba.html">버튼 3</a></div>
 <header style="position: fixed; top: 0; width: 100%; background-color: #f8f9fa; padding: 10px; border-bottom: 1px solid #ddd;">
-
-   <a class="home-button" href="index.html">
+<a class="home-button" href="index.html">
     Home
    </a>
-   <h1>
+<h1>
     VBA
    </h1>
-   <p>
+<p>
     VBA를 쉽게 배울 수 있는 웹페이지입니다.
    </p>
-  </header>
-  <main>
-   <h2>
+</header>
+<main>
+<h2>
     VBA 내용
    </h2>
-   <ul>
-    <li>
-     <p>
-      <strong>
+<ul>
+<li>
+<p>
+<strong>
        Punch Line
       </strong>
-     </p>
-     <p>
-
-
-     </p>
-    </li>
-    
-    <!-- 이곳에 더 많은 표현을 추가할 수 있습니다 -->
-   </ul>
-  </main>
-  <footer>
+</p>
+<p>
+</p>
+</li>
+<!-- 이곳에 더 많은 표현을 추가할 수 있습니다 -->
+</ul>
+</main>
+<footer>
    © 2023 VBA 공부. All rights reserved.
    <a href="mailto:stberry7@gmail.com?subject=Hello&amp;body=Nice%20to%20meet%20you">
     Email me
    </a>
-  </footer>
-  <script>
+</footer>
+<script>
    var clickCount = 0;
 
 
@@ -308,9 +303,5 @@
 </script>
 
 
-
-
-</div>
-</div>
 </body>
 </html>
