--- a/index.html
+++ b/index.html
@@ -107,8 +107,16 @@ window.onload = function() {
         .sidebar { width: 600px; font-size: 20em; }
         .sidebar a { font-size: 20em; }
     }
-    </style></head>
-<body><img id="randomImage" src="" style="height: 130vh; width: 130vw; object-fit: cover; position: absolute; top: -15vh; left: -15vw;"/>
+    </style><style>
+@media only screen and (max-width: 600px) {
+    a {
+        width: 375px !important;
+        height: 175px !important;
+        font-size: 5em !important;
+    }
+}
+</style></head>
+<body><div style="position: fixed; top: 0; left: 0;"><a href="english.html" style="display: block; width: 75px; height: 35px; margin-bottom: 10px; opacity: 0.05; background: #000;">ENGLISH</a><a href="project.html" style="display: block; width: 75px; height: 35px; margin-bottom: 10px; opacity: 0.05; background: #000;">PROJECT</a><a href="vba.html" style="display: block; width: 75px; height: 35px; margin-bottom: 10px; opacity: 0.05; background: #000;">VBA</a></div><img id="randomImage" src="" style="height: 130vh; width: 130vw; object-fit: cover; position: absolute; top: -15vh; left: -15vw;"/>
 <!DOCTYPE html>
 
 <html lang="ko">
