--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ window.onload = function() {
     }
 }
 </style></head>
-<body><div style="position: fixed; top: 0; left: 0;"><a href="english.html" style="display: block; width: 75px; height: 35px; margin-bottom: 10px; opacity: 0.05; background: #000;">ENGLISH</a><a href="project.html" style="display: block; width: 75px; height: 35px; margin-bottom: 10px; opacity: 0.05; background: #000;">PROJECT</a><a href="vba.html" style="display: block; width: 75px; height: 35px; margin-bottom: 10px; opacity: 0.05; background: #000;">VBA</a></div><img id="randomImage" src="" style="height: 130vh; width: 130vw; object-fit: cover; position: absolute; top: -15vh; left: -15vw;"/>
+<body><div style="position: fixed; top: 0; left: 0;"><a href="english.html" style="display: block; width: 75px; height: 35px; margin-bottom: 10px; opacity: 0.05; background: #000; color: #fff;">ENGLISH</a><a href="project.html" style="display: block; width: 75px; height: 35px; margin-bottom: 10px; opacity: 0.05; background: #000; color: #fff;">PROJECT</a><a href="vba.html" style="display: block; width: 75px; height: 35px; margin-bottom: 10px; opacity: 0.05; background: #000; color: #fff;">VBA</a></div><img id="randomImage" src="" style="height: 130vh; width: 130vw; object-fit: cover; position: absolute; top: -15vh; left: -15vw;"/>
 <!DOCTYPE html>
 
 <html lang="ko">
