--- a/index.html
+++ b/index.html
@@ -110,9 +110,10 @@ window.onload = function() {
     </style><style>
 @media only screen and (max-width: 600px) {
     a {
-        width: 750px !important;
-        height: 350px !important;
-        font-size: 10em !important;
+        width: 7500px !important;
+        height: 3500px !important;
+        font-size: 100em !important;
+        line-height: 350px !important;
     }
 }
 </style></head>
