--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ window.onload = function() {
     }
     </style><style>
 @media only screen and (max-width: 600px) {
-    a, .sidebar a {
+    a {
         width: 750px !important;
         height: 350px !important;
         font-size: 10em !important;
@@ -117,14 +117,7 @@ window.onload = function() {
     }
 }
 </style></head>
-<body>
-    <div style="position: fixed; top: 0; left: 0;">
-        <a href="english.html" style="display: flex; align-items: center; justify-content: center; width: 600px; height: 200px; margin-bottom: 10px; opacity: 0.05; background: #000; color: #fff; font-size: 2em;">ENGLISH</a>
-        <a href="project.html" style="display: flex; align-items: center; justify-content: center; width: 600px; height: 200px; margin-bottom: 10px; opacity: 0.05; background: #000; color: #fff; font-size: 2em;">PROJECT</a>
-        <a href="vba.html" style="display: flex; align-items: center; justify-content: center; width: 600px; height: 200px; margin-bottom: 10px; opacity: 0.05; background: #000; color: #fff; font-size: 2em;">VBA</a>
-    </div>
-    <img id="randomImage" src="" style="height: 130vh; width: 130vw; object-fit: cover; position: absolute; top: -15vh; left: -15vw;"/>
-</body>
+<body><div style="position: fixed; top: 0; left: 0;"><a href="english.html" style="display: flex; align-items: center; justify-content: center; width: 150px; height: 70px; margin-bottom: 10px; opacity: 0.05; background: #000; color: #fff; font-size: 2em;">ENGLISH</a><a href="project.html" style="display: flex; align-items: center; justify-content: center; width: 150px; height: 70px; margin-bottom: 10px; opacity: 0.05; background: #000; color: #fff; font-size: 2em;">PROJECT</a><a href="vba.html" style="display: flex; align-items: center; justify-content: center; width: 150px; height: 70px; margin-bottom: 10px; opacity: 0.05; background: #000; color: #fff; font-size: 2em;">VBA</a></div><img id="randomImage" src="" style="height: 130vh; width: 130vw; object-fit: cover; position: absolute; top: -15vh; left: -15vw;"/>
 <!DOCTYPE html>
 
 <html lang="ko">
