--- a/index.html
+++ b/index.html
@@ -3,38 +3,15 @@
 
 <html>
 <head>
-<style>
-        #visitCounter {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: #f9f9f9;
-            border: 1px solid #ccc;
-            padding: 15px;
-            text-align: center;
-            z-index: 1000;
-            display: none;
-        }
-    </style>
-<!-- <script>
-        document.addEventListener('DOMContentLoaded', (event) => {
-            let visitCount = localStorage.getItem('visitCount');
-            if (!visitCount) {
-                visitCount = 0;
-            }
-            visitCount++;
-            localStorage.setItem('visitCount', visitCount);
-
-            const visitCounter = document.getElementById('visitCounter');
-            visitCounter.innerText = `이 페이지를 ${visitCount}번 방문하셨습니다.`;
-            visitCounter.style.display = 'block';
-
-            setTimeout(() => {
-                visitCounter.style.display = 'none';
-            }, 5000);  // 5 seconds
-        });
-    </script> -->
+<style>.sidebar { background-color: rgba(255, 255, 255, 0.9); }</style>
+<script>
+window.onload = function() {
+    var images = ['image/image (1).png', 'image/image (2).png', 'image/image (3).png', 'image/image (4).png', 'image/image (5).png', 'image/image (6).png', 'image/image (7).png', 'image/image (8).png', 'image/image (9).png'];
+    var img = document.getElementById('randomImage');
+    var randomIndex = Math.floor(Math.random() * images.length);
+    img.src = images[randomIndex];
+};
+</script>
 <script>
     window.onload = function() {
         var img1 = document.getElementById('img1');
@@ -125,8 +102,8 @@
         });
     };
 </script>
-</head>
-<body><img src="image/ultrawidefront.jpg" style="width: 100%; height: auto;"/>
+<style>.sidebar { background-color: rgba(255, 255, 255, 0.5); }</style></head>
+<body><img id="randomImage" src="" style="height: 130vh; width: 130vw; object-fit: cover; position: absolute; top: -15vh; left: -15vw;"/>
 <!DOCTYPE html>
 
 <html lang="ko">
@@ -220,21 +197,21 @@
     padding: 10px 0;
 }
 </style>
-<div class="sidebar" style="left: -200px; transition: left 0.5s;">
+<div class="sidebar" style="left: -200px; transition: left 2s;">
 <a href="english.html">
     버튼 1
    </a>
-<a href="#">
+<a href="project.html">
     버튼 2
    </a>
-</div>
+<a href="vba.html">버튼 3</a></div>
 <div class="content">
 <h1>
-    환영합니다!
-   </h1>
+<!-- 환영합니다! -->
+</h1>
 <p>
-    영어 표현을 쉽게 배울 수 있는 웹페이지입니다.
-   </p>
+<!-- 영어 표현을 쉽게 배울 수 있는 웹페이지입니다. -->
+</p>
 <script>
    var clickCount = 0;
 
@@ -319,7 +296,8 @@ document.addEventListener('click', function(e){
         img2.style.display = 'block';
     }
 });
-</script><div id="visitCount"><script>
+
+<!-- </script><div id="visitCount"><script>
 var today = new Date();
 var dd = String(today.getDate()).padStart(2, '0');
 var mm = String(today.getMonth() + 1).padStart(2, '0');
@@ -330,18 +308,18 @@ today = mm + '/' + dd + '/' + yyyy;
 if (localStorage[today])
   localStorage[today]=Number(localStorage[today]) +1;
 else
-  localStorage[today]=1;
+  localStorage[today]=1; -->
 
-document.write("Visits today: " + localStorage[today] + " time(s).");
+// document.write("Visits today: " + localStorage[today] + " time(s).");
 
-var oneDayAgo = new Date(Date.now() - 864e5);
-dd = String(oneDayAgo.getDate()).padStart(2, '0');
-mm = String(oneDayAgo.getMonth() + 1).padStart(2, '0');
-yyyy = oneDayAgo.getFullYear();
+// var oneDayAgo = new Date(Date.now() - 864e5);
+// dd = String(oneDayAgo.getDate()).padStart(2, '0');
+// mm = String(oneDayAgo.getMonth() + 1).padStart(2, '0');
+// yyyy = oneDayAgo.getFullYear();
 
-oneDayAgo = mm + '/' + dd + '/' + yyyy;
+// oneDayAgo = mm + '/' + dd + '/' + yyyy;
 
-document.write("Visits yesterday: " + (localStorage[oneDayAgo] || 0) + " time(s).");
+// document.write("Visits yesterday: " + (localStorage[oneDayAgo] || 0) + " time(s).");
 
 var twoDaysAgo = new Date(Date.now() - 864e5 * 2);
 dd = String(twoDaysAgo.getDate()).padStart(2, '0');
@@ -359,7 +337,21 @@ twoDaysAgo = mm + '/' + dd + '/' + yyyy;
 //         visitCount.style.display = 'none';
 //     }, 3000);
 // };
-// </script>
+</script>
 <!-- <div id="visitCounter"></div> -->
-</div></html></body>
+</div></html><script>
+window.onload = function() {
+    var images = ['image/girl_front1.png', 'image/girl_front2.png'];
+    var img = document.getElementById('randomImage');
+    var randomIndex = Math.floor(Math.random() * images.length);
+    img.src = images[randomIndex];
+};
+</script><script>
+    window.onload = function() {
+        var images = ['image/image (1).png', 'image/image (2).png', 'image/image (3).png', 'image/image (4).png', 'image/image (5).png', 'image/image (6).png', 'image/image (7).png', 'image/image (8).png', 'image/image (9).png'];
+        var img = document.getElementById('randomImage');
+        var randomIndex = Math.floor(Math.random() * images.length);
+        img.src = images[randomIndex];
+    };
+    </script></body>
 </html>
