--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ window.onload = function() {
             top: 0;
             left: 0;
             height: 100%;
-            width: 200px;
+            width: 500px;
             background: #343a40;
             color: #fff;
             padding: 20px;
@@ -198,13 +198,16 @@ window.onload = function() {
 }
 </style>
 <div class="sidebar" style="left: -200px; transition: left 2s;">
-<a href="english.html">
-    버튼 1
-   </a>
-<a href="project.html">
-    버튼 2
-   </a>
-<a href="vba.html">버튼 3</a></div>
+    <a href="english.html">
+        버튼 1
+    </a>
+    <a href="project.html">
+        버튼 2
+    </a>
+    <a href="vba.html">
+        버튼 3
+    </a>
+</div>
 <div class="content">
 <h1>
 <!-- 환영합니다! -->
