--- a/index.html
+++ b/index.html
@@ -300,18 +300,18 @@ document.addEventListener('click', function(e){
     }
 });
 
-<!-- </script><div id="visitCount"><script>
-var today = new Date();
-var dd = String(today.getDate()).padStart(2, '0');
-var mm = String(today.getMonth() + 1).padStart(2, '0');
-var yyyy = today.getFullYear();
+// </script><div id="visitCount"><script>
+// var today = new Date();
+// var dd = String(today.getDate()).padStart(2, '0');
+// var mm = String(today.getMonth() + 1).padStart(2, '0');
+// var yyyy = today.getFullYear();
 
-today = mm + '/' + dd + '/' + yyyy;
+// today = mm + '/' + dd + '/' + yyyy;
 
-if (localStorage[today])
-  localStorage[today]=Number(localStorage[today]) +1;
-else
-  localStorage[today]=1; -->
+// if (localStorage[today])
+//   localStorage[today]=Number(localStorage[today]) +1;
+// else
+//   localStorage[today]=1;
 
 // document.write("Visits today: " + localStorage[today] + " time(s).");
 
@@ -324,12 +324,12 @@ else
 
 // document.write("Visits yesterday: " + (localStorage[oneDayAgo] || 0) + " time(s).");
 
-var twoDaysAgo = new Date(Date.now() - 864e5 * 2);
-dd = String(twoDaysAgo.getDate()).padStart(2, '0');
-mm = String(twoDaysAgo.getMonth() + 1).padStart(2, '0');
-yyyy = twoDaysAgo.getFullYear();
+// var twoDaysAgo = new Date(Date.now() - 864e5 * 2);
+// dd = String(twoDaysAgo.getDate()).padStart(2, '0');
+// mm = String(twoDaysAgo.getMonth() + 1).padStart(2, '0');
+// yyyy = twoDaysAgo.getFullYear();
 
-twoDaysAgo = mm + '/' + dd + '/' + yyyy;
+// twoDaysAgo = mm + '/' + dd + '/' + yyyy;
 
 // document.write("Visits the day before yesterday: " + (localStorage[twoDaysAgo] || 0) + " time(s).");
 // </script></div><script>
@@ -343,12 +343,12 @@ twoDaysAgo = mm + '/' + dd + '/' + yyyy;
 </script>
 <!-- <div id="visitCounter"></div> -->
 </div></html><script>
-window.onload = function() {
-    var images = ['image/girl_front1.png', 'image/girl_front2.png'];
-    var img = document.getElementById('randomImage');
-    var randomIndex = Math.floor(Math.random() * images.length);
-    img.src = images[randomIndex];
-};
+// window.onload = function() {
+//     var images = ['image/girl_front1.png', 'image/girl_front2.png'];
+//     var img = document.getElementById('randomImage');
+//     var randomIndex = Math.floor(Math.random() * images.length);
+//     img.src = images[randomIndex];
+// };
 </script><script>
     window.onload = function() {
         var images = ['image/image (1).png', 'image/image (2).png', 'image/image (3).png', 'image/image (4).png', 'image/image (5).png', 'image/image (6).png', 'image/image (7).png', 'image/image (8).png', 'image/image (9).png'];
