--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@ window.onload = function() {
             width: 500px;
             background: #343a40;
             color: #fff;
+            opacity: 0.1;
             padding: 20px;
             display: flex;
             flex-direction: column;
