--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@ window.onload = function() {
             background: #6c757d;
             border: none;
             color: #fff;
+            opacity: 0.3;
             text-decoration: none;
             display: inline-block;
             text-align: center;
