--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@ window.onload = function() {
 
         .sidebar a {
             padding: 10px;
-            background: #6c757d;
+            /* background: #6c757d; */
+            background: rgba(108, 117, 125, 1.0);
             border: none;
             color: #fff;
 
