--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ window.onload = function() {
             position: fixed;
             top: 0;
             left: 0;
-            height: 150%;
+            height: 100px;
             width: 300px;
             background: #343a40;
             color: #fff;
