--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@ window.onload = function() {
             position: fixed;
             top: 0;
             left: 0;
-            height: 100px;
-            width: 300px;
+            height: 100%;
+            width: 200px;
             background: #343a40;
             color: #fff;
             opacity: 0.1;
@@ -143,7 +143,8 @@ window.onload = function() {
             background: rgba(108, 117, 125, 1.0);
             border: none;
             color: #fff;
-
+            height: 50px;
+            width: 150px;
             text-decoration: none;
             display: inline-block;
             text-align: center;
