--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ window.onload = function() {
             display: inline-block;
             text-align: center;
             cursor: pointer;
+            font-size: 3em;  /* 글자 크기 설정 */
         }
 
         .sidebar a:hover {
