--- a/index.html
+++ b/index.html
@@ -160,6 +160,14 @@ window.onload = function() {
             text-align: center;
             width: 80%;
         }
+        
+        @media only screen and (max-width: 600px) {
+    .sidebar a {
+        height: 150px;
+        width: 450px;
+        font-size: 6em;
+    }
+}
   </style>
 <style>
    .circle {
