--- a/index.html
+++ b/index.html
@@ -212,13 +212,13 @@ window.onload = function() {
 </style>
 <div class="sidebar" style="left: -200px; transition: left 2s;">
     <a href="english.html">
-        버튼 1
+        ENGLISH
     </a>
     <a href="project.html">
-        버튼 2
+        PROJECT
     </a>
     <a href="vba.html">
-        버튼 3
+        EXCEL VBA
     </a>
 </div>
 <div class="content">
