--- a/vba.html
+++ b/vba.html
@@ -253,14 +253,16 @@
 }
   </style>
 </head>
-<body><div class="sidebar" style="left: -200px; transition: left 2s;">
+
+<!-- <body><div class="sidebar" style="left: -200px; transition: left 2s;">
 <a href="english.html">
     버튼 1
    </a>
 <a href="project.html">
     버튼 2
    </a>
-<a href="vba.html">버튼 3</a></div>
+<a href="vba.html">버튼 3</a></div> -->
+
 <header style="position: fixed; top: 0; width: 100%; background-color: #f8f9fa; padding: 10px; border-bottom: 1px solid #ddd;">
 <a class="home-button" href="index.html">
     Home
@@ -278,11 +280,11 @@
    </h2>
 <ul>
 <li>
-<p>
+<!-- <p>
 <strong>
        Punch Line
       </strong>
-</p>
+</p> -->
 <p>
 </p>
 </li>
