--- a/english.html
+++ b/english.html
@@ -88,14 +88,14 @@
 }
   </style>
 </head>
-<body><div class="sidebar" style="left: -200px; transition: left 2s;">
+<!-- <body><div class="sidebar" style="left: -200px; transition: left 2s;">
 <a href="english.html">
     버튼 1
    </a>
 <a href="project.html">
     버튼 2
    </a>
-<a href="vba.html">버튼 3</a></div>
+<a href="vba.html">버튼 3</a></div> -->
 <header>
 <a class="home-button" href="index.html">
     Home
