--- a/index.html
+++ b/index.html
@@ -220,8 +220,14 @@ window.onload = function() {
     <a href="vba.html">
         EXCEL VBA
     </a>
-    <a href="vba.html">
+    <a href="usa.html">
         USA
+    </a>
+    <a href="mind.html">
+        Mindset
+    </a>
+    <a href="leader.html">
+        Leadership
     </a>
 </div>
 <div class="content">
