--- a/vba.html
+++ b/vba.html
@@ -6,7 +6,7 @@
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f4f4f4;
-            background-image: url('bg/vba bg1.png');
+            /* background-image: url('bg/vba bg1.png'); */
             background-size: cover;
             background-position: center;
         }
