--- a/index.html
+++ b/index.html
@@ -224,10 +224,10 @@ window.onload = function() {
         USA
     </a>
     <a href="mind.html">
-        Mindset
+        MINDSET
     </a>
     <a href="leader.html">
-        Leadership
+        LEADERSHIP
     </a>
 </div>
 <div class="content">
