--- a/english.html
+++ b/english.html
@@ -119,7 +119,8 @@
       </strong>
 </p>
 <p>
-      <img src="image_english/punch_line.png" alt="Punch Line">
+      <img src="./image_english/punch_line.png" alt="Punch Line">
+<img src="image_english/punch_line.png" alt="Punch Line">
         비즈니스에서 "펀치라인"이란 제품, 서비스, 또는 브랜드 자체의 본질을 잡아내는 기억에 남는 문구나 문장을 의미합니다. 주로 마케팅과 광고에서 사용되며, 목표 고객을 구매 또는 브랜드를 기억하는 등 원하는 행동으로 유도하는 것을 목표로 합니다.
 
         펀치라인은 브랜드의 가치 제안, 독특한 판매 포인트, 또는 제공하는 경험을 요약해야 합니다. 종종 재치 있고, 영리하며, 감정적으로 resonant하므로 브랜드가 경쟁자들 사이에서 두각을 나타낼 수 있습니다.
