--- a/english.html
+++ b/english.html
@@ -144,7 +144,7 @@
       </strong>
 </p>
 <p>
-<img src="image_english/0020.heartbreaker" alt="Heart Breaker">
+<img src="image_english/0020.heartbreaker.png" alt="Heart Breaker"><br>
       "Heartbreaker"는 영어에서 사용되는 표현으로, 긍정적이지 않은 의미를 갖습니다. 이 용어는 누군가가 다른 사람의 마음을 상하게 하거나, 감정적으로 상처를 주는 사람을 묘사할 때 사용됩니다. 주로 불공평하게 행동하거나 상대방의 감정을 무시하거나 배신하는 행동을 하는 사람에게 쓰이는 표현입니다.
 
                     예를 들어, 연인 사이에서 한 쪽이 다른 쪽의 감정을 무시하고 감정적으로 상처를 주는 행동을 한다면 그 사람을 "heartbreaker"라고 할 수 있습니다. 또한, 친구나 가족 사이에서도 이 용어를 사용하여 누군가가 다른 사람의 마음을 상처로 만드는 행동을 지칭할 수 있습니다.
@@ -159,7 +159,7 @@
       </strong>
 </p>
 <p>
-    <img src="image_english/0030.igotyourback_00" alt="I Got Your Back">
+    <img src="image_english/0030.igotyourback_00.png" alt="I Got Your Back"><br>
       'I got your back'는 '나는 너를 도와줄게' 또는 '나는 너를 지지하고 뒷받침할게'라는 의미의 표현입니다.  
 
                     'back'이 '등'을 뜻하듯이, 누군가의 'back을 가지다'는 그 사람의 편에 서서 지지하고 돕는다는 의미입니다. 
