--- a/english.html
+++ b/english.html
@@ -176,6 +176,7 @@
      </strong>
 </p>
 <p>
+    <img src="image_english/0040.square_away_00.png" alt="Square Away" style="width: 130%;"><br>
      "Square away"는 영어에서 사용되는 구어 표현으로, 무언가를 마무리하거나 정리하고 준비하는 것을 의미합니다. 이 표현은 일을 처리하고 완료하는 데 초점을 맞추는 데 사용되며, 주로 과제, 일정, 문제 또는 준비물을 다듬고 완성하는 과정을 지칭할 때 자주 사용됩니다.
 
                     예를 들어, 만약 누군가에게 중요한 프로젝트를 맡겼고 그 프로젝트가 완료되어야 할 기한이 다가온다면, 그 사람은 "I need to square away the project before the deadline."라고 말할 수 있습니다. 이는 프로젝트를 마무리 짓고 모든 세부사항을 처리하여 기한까지 완료하는 것을 의미합니다.
@@ -652,7 +653,14 @@ document.addEventListener('click', function(event) {
         document.getElementById('randomImage').src = imgSrc;
     }
 </script>
-
+<script>
+    window.onload = function() {
+        var images = ['00', '01', '02', '03', '04'];
+        var randomImage = images[Math.floor(Math.random() * images.length)];
+        var imgSrc = './image_english/0040.square_away_' + randomImage + '.png';
+        document.getElementById('randomImage').src = imgSrc;
+    }
+</script>
 <!-- <script>
     window.onload = function() {
         var images = ['00', '01', '02', '03', '04'];
