--- a/english.html
+++ b/english.html
@@ -191,6 +191,7 @@
      </strong>
 </p>
 <p>
+    <img src="0050.call_out.png" alt="Call Out" style="width: 130%;"><br>
      Call out은 도면이나 문서에서 특정 부분을 가리키기 위해 사용하는 숫자나 문자를 말합니다. 
                     
                     예를 들어, 기계 도면에 각 부품의 이름을 적는 대신에, 부품별로 1, 2, 3과 같은 일련번호를 매겨놓는 경우가 있습니다. 
