--- a/english.html
+++ b/english.html
@@ -121,7 +121,7 @@
 
 <p>
       <!-- <img src="./image_english/punch_line.png" alt="Punch Line"> -->
-<img src="image_english/punch_line.png" alt="Punch Line" style="width: 130%;"><br>
+<img src="image_english/punch_line.png" alt="Punch Line" style="width: 120%;"><br>
 
         비즈니스에서 "펀치라인"이란 제품, 서비스, 또는 브랜드 자체의 본질을 잡아내는 기억에 남는 문구나 문장을 의미합니다. 주로 마케팅과 광고에서 사용되며, 목표 고객을 구매 또는 브랜드를 기억하는 등 원하는 행동으로 유도하는 것을 목표로 합니다.
 
@@ -144,7 +144,7 @@
       </strong>
 </p>
 <p>
-<img src="image_english/0020.heartbreaker.png" alt="Heart Breaker" style="width: 130%;"><br>
+<img src="image_english/0020.heartbreaker.png" alt="Heart Breaker" style="width: 120%;"><br>
       "Heartbreaker"는 영어에서 사용되는 표현으로, 긍정적이지 않은 의미를 갖습니다. 이 용어는 누군가가 다른 사람의 마음을 상하게 하거나, 감정적으로 상처를 주는 사람을 묘사할 때 사용됩니다. 주로 불공평하게 행동하거나 상대방의 감정을 무시하거나 배신하는 행동을 하는 사람에게 쓰이는 표현입니다.
 
                     예를 들어, 연인 사이에서 한 쪽이 다른 쪽의 감정을 무시하고 감정적으로 상처를 주는 행동을 한다면 그 사람을 "heartbreaker"라고 할 수 있습니다. 또한, 친구나 가족 사이에서도 이 용어를 사용하여 누군가가 다른 사람의 마음을 상처로 만드는 행동을 지칭할 수 있습니다.
@@ -159,7 +159,7 @@
       </strong>
 </p>
 <p>
-    <img src="image_english/0030.igotyourback_00.png" alt="I Got Your Back" style="width: 130%;"><br>
+    <img src="image_english/0030.igotyourback_00.png" alt="I Got Your Back" style="width: 120%;"><br>
       'I got your back'는 '나는 너를 도와줄게' 또는 '나는 너를 지지하고 뒷받침할게'라는 의미의 표현입니다.  
 
                     'back'이 '등'을 뜻하듯이, 누군가의 'back을 가지다'는 그 사람의 편에 서서 지지하고 돕는다는 의미입니다. 
@@ -176,7 +176,7 @@
      </strong>
 </p>
 <p>
-    <img src="image_english/0040.square_away_00.png" alt="Square Away" style="width: 130%;"><br>
+    <img src="image_english/0040.square_away_00.png" alt="Square Away" style="width: 120%;"><br>
      "Square away"는 영어에서 사용되는 구어 표현으로, 무언가를 마무리하거나 정리하고 준비하는 것을 의미합니다. 이 표현은 일을 처리하고 완료하는 데 초점을 맞추는 데 사용되며, 주로 과제, 일정, 문제 또는 준비물을 다듬고 완성하는 과정을 지칭할 때 자주 사용됩니다.
 
                     예를 들어, 만약 누군가에게 중요한 프로젝트를 맡겼고 그 프로젝트가 완료되어야 할 기한이 다가온다면, 그 사람은 "I need to square away the project before the deadline."라고 말할 수 있습니다. 이는 프로젝트를 마무리 짓고 모든 세부사항을 처리하여 기한까지 완료하는 것을 의미합니다.
@@ -191,7 +191,7 @@
      </strong>
 </p>
 <p>
-    <img src="0050.call_out.png" alt="Call Out" style="width: 130%;"><br>
+    <img src="image_english/0050.call_out.png" alt="Call Out" style="width: 120%;"><br>
      Call out은 도면이나 문서에서 특정 부분을 가리키기 위해 사용하는 숫자나 문자를 말합니다. 
                     
                     예를 들어, 기계 도면에 각 부품의 이름을 적는 대신에, 부품별로 1, 2, 3과 같은 일련번호를 매겨놓는 경우가 있습니다. 
@@ -224,7 +224,7 @@
      </strong>
 </p>
 <p>
-    <img src="0060.logjam_00.png" alt="Logjam" style="width: 130%;"><br>
+    <img src="image_english/0060.logjam_00.png" alt="Logjam" style="width: 120%;"><br>
      "Logjam"이란 단어는 주로 두 가지 상황에서 사용됩니다:
 
                     실제적인 의미: 강 또는 하천에서 나무 원목들이 얽히거나 겹쳐서 움직임을 막는 현상을 의미합니다. 이런 현상은 물의 흐름을 방해하고, 때로는 홍수를 일으키기도 합니다.
