--- a/english.html
+++ b/english.html
@@ -255,6 +255,7 @@
      </strong>
 </p>
 <p>
+    <img src="image_english/0080.pickon_00.png" alt="Pick On Someone" style="width: 120%;"><br>
      "Pick on someone"은 누군가를 지적하거나 비난하는 것을 뜻합니다. 이 표현은 주로 더 약한 측면에 속하는 사람이나 상황을 더 강한 측면에 속하는 사람이 무리하게 비판하거나 괴롭히는 상황을 묘사할 때 사용됩니다.
 
                     이 표현은 종종 어린이들 사이에서 사용되며, 더 강하고 능력 있는 아이들이 더 약하고 민감한 아이들을 괴롭히거나 비난하는 상황을 설명할 때 자주 들을 수 있습니다. 그러나 이러한 상황은 어린이들 뿐만 아니라 어른들 간의 상호작용에서도 발생할 수 있습니다.
@@ -323,6 +324,7 @@
      </strong>
 </p>
 <p>
+    <img src="image_english/0120.cobble_together_00.png" alt="Cobble Together" style="width: 120%;"><br>
      'cobble together'는 '여러 가지를 모아서 서투르게 만들다'라는 의미의 표현입니다. 
                     
                     'cobble'은 보통 작고 불규칙한 돌들을 이용해 길이나 건물을 만드는 것을 의미합니다. 
