--- a/english.html
+++ b/english.html
@@ -119,7 +119,7 @@
       </strong>
 </p>
 
-<p>
+<p style="font-size: 2em;">
       <!-- <img src="./image_english/punch_line.png" alt="Punch Line"> -->
 <img src="image_english/punch_line.png" alt="Punch Line" style="width: 50%;"><br>
 
@@ -624,7 +624,7 @@ document.addEventListener('click', function(e){
     /* Increase the font size on screens smaller than 600px (typical size for mobile phones) */
     @media only screen and (max-width: 600px) {
         body {
-            font-size: 100em !important;
+            font-size: 3em !important;
         }
     }
     
