--- a/english.html
+++ b/english.html
@@ -9,6 +9,7 @@
 <style>
    body {
             font-family: Arial, sans-serif;
+            font-size: 2em;
         }
 
         header {
@@ -88,7 +89,7 @@
 }
   </style>
 </head>
-<!-- <body><div class="sidebar" style="left: -200px; transition: left 2s;">
+<!-- <body style="font-size: 2em;"><div class="sidebar" style="left: -200px; transition: left 2s;">
 <a href="english.html">
     버튼 1
    </a>
@@ -119,7 +120,8 @@
       </strong>
 </p>
 
-<p style="font-size: 2em;">
+<!-- <p style="font-size: 2em;"> -->
+<p>
       <!-- <img src="./image_english/punch_line.png" alt="Punch Line"> -->
 <img src="image_english/punch_line.png" alt="Punch Line" style="width: 50%;"><br>
 
