--- a/english.html
+++ b/english.html
@@ -470,6 +470,7 @@
      </strong>
 </p>
 <p>
+    <img src="image_english/0190.goofy_to_me_00.png" alt="A Little Goofy to Me" style="width: 100%;"><br>
      "A little goofy to me"는 비격식적인 영어 표현으로, 누군가나 무언가가 약간 우스꽝스럽거나 웃긴 느낌을 주는 것을 나타냅니다. 이 표현은 주로 긍정적인 뉘앙스로 사용되며, 상대방을 해치거나 비난하는 의도가 없이 그저 웃기거나 기묘한 면을 갖고 있다고 느끼는 상황에서 자주 사용됩니다.<br>
 
                     예를 들어, 어떤 사람이 엉뚱한 장난을 치거나 귀여운 실수를 저지르면 주변 사람들은 "Oh, you're a little goofy!"라고 말하여 그 사람이 웃기고 귀엽게 느껴진다고 표현할 수 있습니다. 이때 "goofy"는 웃기고 괴짜 같은 뜻을 갖고 있으며, "a little"은 약간이라는 의미를 더합니다.<br>
@@ -482,6 +483,7 @@
      </strong>
 </p>
 <p>
+    <img src="image_english/0200.potato_quality_00.png" alt="Potato Quality" style="width: 100%;"><br>
      "Potato quality"는 영어에서 사용되는 비격식적인 표현으로, 사진, 비디오 또는 기타 미디어 콘텐츠의 품질이 매우 낮거나 부족한 상태를 묘사하는 용어입니다. 이 표현은 주로 이미지나 동영상이 해상도가 낮고 선명하지 않아 마치 감자(포테이토)를 보는 것과 같이 흐릿하고 모호한 상태를 비유적으로 표현하는데 사용됩니다.<br>
 
                     이미지 품질: 친구가 여행에서 찍은 사진을 보여줄 때, 사진이 매우 흐릿하고 해상도가 낮아서 세부사항이 거의 보이지 않습니다. 이때 다른 친구가 농담 삼아 "Wow, your photo is potato quality!"라고 말할 수 있습니다.<br>
@@ -496,6 +498,7 @@
      </strong>
 </p>
 <p>
+    <img src="image_english/0210.gibber_00.png" alt="Gibber" style="width: 100%;"><br>
      'gibber'는 '무의미한 말을 더듬거리다'는 뜻이 있고, 이를 바탕으로 한 gibberish는 혼란스러운 말이나 문장을 뜻하는 말입니다. <br>
                     
                     예를 들어, 그는 술에 취해 정신이 없는 gibberish를 계속 늘어놓고 있었다. <br>
