--- a/english.html
+++ b/english.html
@@ -457,7 +457,7 @@
      </strong>
 </p>
 <p>
-    <img src="image_english/0170.rhetorical question _00.png" alt="My question is kind of rhetorical question." style="width: 100%;"><br>
+    <img src="image_english/0180.rathole_00.png" alt="Rathole" style="width: 100%;"><br>
      문맥에 따른 일반적인 의미: 먼저, "rathole"은 직역하면 '쥐구멍'을 의미하며, 이는 작고 협소한 공간이나 구멍을 가리키는 데 사용될 수 있습니다. <br>
                     
                     건설 및 석유 산업에서의 의미: 건설 현장이나 석유 광산에서 "rathole"은 드릴링 장비를 저장하는 데 사용되는 깊고 좁은 구멍을 가리킵니다. <br>
