--- a/english.html
+++ b/english.html
@@ -292,7 +292,7 @@
      </strong>
 </p>
 <p>
-    <img src="image_english/0100.flesh_out_00" alt="Flesh Out" style="width: 100%;"><br>
+    <img src="image_english/0100.flesh_out_00.png" alt="Flesh Out" style="width: 100%;"><br>
      "Flesh out"은 영어에서 "상세히 설명하다" 또는 "자세히 계획하다"라는 의미의 구어 표현입니다. 이 표현은 무언가를 더 자세하게 다루거나 구체적으로 설명하거나 계획을 세부적으로 완성시키는 데 사용됩니다.<br>
 
                     "Flesh out"은 종종 "flash out"이라고 오해되기도 하지만, 올바른 표현은 "flesh out"입니다.<br>
