--- a/english.html
+++ b/english.html
@@ -565,6 +565,17 @@
                     
                     한 마디로 '앞서 나가는' 이점이라는 뜻으로 이해하시면 될 것 같습니다.<br>
     </p>
+    <strong>
+        Trolling
+       </strong>
+  </p>
+  <p>
+      <img src="image_english/0250.trolling_00.png" alt="Trolling" style="width: 100%;"><br>
+        인터넷에서 사용되는 용어로, 다른 사람들을 고의적으로 성가시게 하거나 분노를 유발하는 행동을 가리킵니다. 이러한 행동은 종종 비방적인 댓글, 교묘한 도발, 또는 누군가를 기만하는 데 목적이 있습니다.<br>
+
+        비즈니스 측면에서 보면, 트롤링은 종종 소셜 미디어, 커뮤니티 포럼, 댓글 섹션 등에서 발생하며, 이러한 행동은 브랜드의 온라인 이미지나 고객 경험에 부정적인 영향을 미칠 수 있습니다. 그래서 많은 기업들이 이러한 행동을 관리하고자 커뮤니티 가이드라인을 설정하고, 필요한 경우 이를 강제하는 커뮤니티 매니저를 고용합니다.<br>
+      </p>
+  
 <!-- 이곳에 더 많은 표현을 추가할 수 있습니다 -->
 </ul>
 </main>
