--- a/english.html
+++ b/english.html
@@ -123,7 +123,7 @@
 <!-- <p style="font-size: 2em;"> -->
 <p>
       <!-- <img src="./image_english/punch_line.png" alt="Punch Line"> -->
-<img src="image_english/punch_line.png" alt="Punch Line" style="width: 100%;"><br>
+<img src="image_english/0010.punch_line.png" alt="Punch Line" style="width: 100%;"><br>
 
         비즈니스에서 "펀치라인"이란 제품, 서비스, 또는 브랜드 자체의 본질을 잡아내는 기억에 남는 문구나 문장을 의미합니다. 주로 마케팅과 광고에서 사용되며, 목표 고객을 구매 또는 브랜드를 기억하는 등 원하는 행동으로 유도하는 것을 목표로 합니다.
 
