--- a/index.html
+++ b/index.html
@@ -364,19 +364,23 @@ document.addEventListener('click', function(e){
 // };
 </script>
 <!-- <div id="visitCounter"></div> -->
-</div></html><script>
-// window.onload = function() {
-//     var images = ['image/girl_front1.png', 'image/girl_front2.png'];
-//     var img = document.getElementById('randomImage');
-//     var randomIndex = Math.floor(Math.random() * images.length);
-//     img.src = images[randomIndex];
-// };
-</script><script>
-    window.onload = function() {
-        var images = ['image/image (1).png', 'image/image (2).png', 'image/image (3).png', 'image/image (4).png', 'image/image (5).png', 'image/image (6).png', 'image/image (7).png', 'image/image (8).png', 'image/image (9).png'];
-        var img = document.getElementById('randomImage');
-        var randomIndex = Math.floor(Math.random() * images.length);
-        img.src = images[randomIndex];
-    };
-    </script></body>
+</div>
+</html>
+    <script>
+        // window.onload = function() {
+        //     var images = ['image/girl_front1.png', 'image/girl_front2.png'];
+        //     var img = document.getElementById('randomImage');
+        //     var randomIndex = Math.floor(Math.random() * images.length);
+        //     img.src = images[randomIndex];
+        // };
+    </script>
+    <script>
+        // window.onload = function() {
+        //     var images = ['image/image (1).png', 'image/image (2).png', 'image/image (3).png', 'image/image (4).png', 'image/image (5).png', 'image/image (6).png', 'image/image (7).png', 'image/image (8).png', 'image/image (9).png'];
+        //     var img = document.getElementById('randomImage');
+        //     var randomIndex = Math.floor(Math.random() * images.length);
+        //     img.src = images[randomIndex];
+        // };
+    </script>
+    </body>
 </html>
