--- a/index.html
+++ b/index.html
@@ -229,6 +229,12 @@ window.onload = function() {
     <a href="leader.html">
         LEADERSHIP
     </a>
+    <a href="doodle.html">
+        DOODLE
+    </a>
+    <a href="tetris.html">
+        TETRIS
+    </a>
 </div>
 <div class="content">
 <h1>
