--- a/doodle.html
+++ b/doodle.html
@@ -236,7 +236,7 @@ function drawScores_old() {
         }
     </script>
 
-<audio id="myAudio" controls autoplay>
+<audio id="myAudio" controls>
   <source src="sound_doodle/cute.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
