--- a/doodle.html
+++ b/doodle.html
@@ -236,7 +236,8 @@ function drawScores_old() {
         }
     </script>
 
-<audio id="myAudio" controls>
+<audio id="myAudio" controls autoplay>
+  /* <source src="sound_doodle/evolution.mp3" type="audio/mpeg"> */
   <source src="sound_doodle/cute.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
@@ -258,7 +259,7 @@ function toggleAudio() {
 </script>
 
 <audio id="myAudio" controls autoplay style="display: none;">
-  <source src="sound_doodle/cute.mp3" type="audio/mpeg">
+  <source src="sound_doodle/evolution.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 
